# yamlllm

./: .gitignore  PROPOSAL.md  README.md  REPORT.md  pyproject.toml  requirements.txt
data/: shakespeare.txt
docs/: FEATURES.md
examples/: alibi-model.yaml  gpt-mini.yaml  gqa-model.yaml  llama-style.yaml  mla-model.yaml  postnorm-model.yaml  tiny.yaml
outputs/: diagram.mmd  tiny_jax.py  tiny_pytorch.py
scripts/: create_archive.sh  train.py  visualize_ir.py
tests/: test_alibi.py  test_gpt_mini.py  test_gqa.py  test_llama.py  test_mla.py  test_output.py  test_postnorm.py  test_tiny.py  test_train_script.py  test_yamlllm.py
yamlllm/: __init__.py  cli.py  ir.py  ir_builder.py  parser.py  schema.py
yamlllm/codegen/: __init__.py  jax.py  pytorch.py
